--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   },
   "require": {
     "php": ">=7.2",
+    "hyperf/di": "^2.0.0",
     "hyperf-plus/route": "^1.0.0"
   },
   "require-dev": {
